--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ body {
     top: 450px;
 }
 
-#restart_div {
+#restart-div {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -159,11 +159,11 @@ body {
     margin-top: 30%;
 }
 
-.small_text{
+.small-text{
     font-size: 15px;
 }
 
-#score_div{
+#wynik{
     position: absolute;
     margin-top: 20%;
     margin-left: 10%;
@@ -174,7 +174,7 @@ body {
     box-shadow: 4px 4px 0px 1px #808080;
 }
 
-.car{
+.auto{
     position: absolute;
     height: 60px;
     width: 40px;
@@ -182,13 +182,31 @@ body {
     box-shadow: 0px 1px 8px 0px black;
 }
 
-#car{
+#auto-gracza{
     bottom: 8%;
     left: 60%;
     background-color: #ffdf5a;
 }
 
-.f_glass{
+#auto1{
+    top: -100px;
+    left: 60%;
+    background-color: #26c5ff;
+}
+
+#auto2{
+    top: -200px;
+    left: 40%;
+    background-color: #26c5ff;
+}
+
+#auto3{
+    top: -350px;
+    left: 50%;
+    background-color: #26c5ff;
+}
+
+.przód-szyba{
     position: absolute;
     height: 20%;
     width: 60%;
@@ -198,7 +216,7 @@ body {
     background-color: #484848;
 }
 
-.b_glass{
+.tył-szyba{
     position: absolute;
     height: 20%;
     width: 60%;
@@ -208,7 +226,7 @@ body {
     background-color: #484848;
 }
 
-.f_light_l{
+.przód-światło-l{
     position: absolute;
     height: 10%;
     width: 20%;
@@ -218,7 +236,7 @@ body {
     background-color: #efefef;
 }
 
-.f_light_r{
+.przód-światło-p{
     position: absolute;
     height: 10%;
     width: 20%;
@@ -228,7 +246,7 @@ body {
     background-color: #efefef;
 }
 
-.f_tyre_l{
+.przód-koło-l{
     position: absolute;
     height: 20%;
     width: 10%;
@@ -238,7 +256,7 @@ body {
     border-radius: 5px 0px 0px 5px;
 }
 
-.f_tyre_r{
+.przód-koło-p{
     position: absolute;
     height: 20%;
     width: 10%;
@@ -248,7 +266,7 @@ body {
     border-radius: 0px 5px 5px 0px;
 }
 
-.b_tyre_l{
+.tył-koło-l{
     position: absolute;
     height: 20%;
     width: 10%;
@@ -258,7 +276,7 @@ body {
     border-radius: 5px 0px 0px 5px;
 }
 
-.b_tyre_r{
+.tył-koło-p{
     position: absolute;
     height: 20%;
     width: 10%;
@@ -267,28 +285,6 @@ body {
     left: 100%;
     border-radius: 0px 5px 5px 0px;
 }
-
-#car_1{
-    top: -100px;
-    left: 60%;
-    background-color: #26c5ff;
-}
-
-#car_2{
-    top: -200px;
-    left: 40%;
-    background-color: #26c5ff;
-}
-
-#car_3{
-    top: -350px;
-    left: 50%;
-    background-color: #26c5ff;
-}
-
-
-
-
 
 
 /* ==========================================================================
