--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ body {
 
 #container{
     position: relative;
-    height: 90vh;
+    height: 500px;
     width: 25%;
     left: 35%;
     margin-top: 20px;;
